# cali-product-workflow

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  RULES.md  architecture.md  cali-product-workflow-spec.md  cali-product-workflow.json  cali-product-workflow.schema.json  context-structure.md  context.md  install.sh  package-lock.json  package.json  research.md  retired-skills.yaml  setup.sh  skills-lock.json  stelow-spec.md  stelow.schema.json  stryker.conf.json  tsconfig.build.json  tsconfig.json  vitest.mutate.config.ts
.cali-product-workflow/: gap-implementation-plan.md
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: marketplace.json  plugin.json
.github/: CI-TEST-PRACTICES.md  RELEASE_WORKFLOW.md
.opencode-plugin/: plugin.json
aftermath/: refinement-plan.md  review-context.md
cli-agents/: COMMANDS.md
docs/: ABOUT-AUTO-TRIGGER.md  INSTALLATION.md  PORTABILITY.md  SECURITY.md  STRUCTURE-RECOMMENDATION.md  TOOL-REFERENCE-PATTERN.md  implementation-plan.md  improvement-plan.md  investigacao-mobile-adaptativo.md  investigacao-resumo-habilidades.md  plano-migracao-skills-read-direct.md
integrations/herdr/stelow-board/: Cargo.toml  README.md  herdr-plugin.toml
integrations/herdr/stelow-board/scripts/: open-board.sh
integrations/herdr/stelow-board/src/: main.rs
lat.md/: architecture.md
scripts/: copy-pulse-assets.sh  generate-cli-commands.ts  init-workflow.sh  setup-pulse.sh  setup.sh  sync-cli-tools.sh  test-ci.sh  uninstall.sh  version-sync.mjs
stryker-reports/: index.html
test-results/: junit.xml
tests/: README.md  helpers.ts  (+3 more)
(+395 files in other folders)
