[package]
name = "stelow-board"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stelow-board"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
strip = true